# birds-evolution

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  todo  vite.config.ts
assets/: index-C-JvtKrX.js  index-CRD1sd-Z.js  index-CfH6xrkg.css  index-D8XoSI7J.css  index-DXV8MLkv.js  index-Dnlj1Iw5.js  index-RX62MULz.css  lib_simulation_wasm_bg-BZq7TLti.wasm  lib_simulation_wasm_bg-DkWIC5lI.wasm
docs/: index.html  index.js
docs/pkg/: lib_simulation_wasm.d.ts  lib_simulation_wasm.js  lib_simulation_wasm_bg.js  lib_simulation_wasm_bg.wasm  lib_simulation_wasm_bg.wasm.d.ts  package.json
libs/: Cargo.toml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossing.rs  lib.rs  mutation.rs  roulette.rs  statistics.rs  traits.rs
libs/network/: Cargo.toml
libs/network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  statistics.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs  world_props.rs
libs/src/: lib.rs
src/: App.tsx  simulation-wasm.ts  wasm.ts
src/components/: GenerationInfo.tsx  HistoryChart.tsx  PauseOverlay.tsx  RestartPanel.tsx  SimCanvas.tsx
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
