[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.1"
wasm-bindgen = "0.2.100"
lib-simulation = { path = "../simulation" }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[build]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
